// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segment tests should render Segment correctly 1`] = `
<DocumentFragment>
  .c3 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c4 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  display: flex;
  background-color: #EEEEEE;
  border-radius: 4px;
  height: 36px;
  padding: 4px;
  overflow: hidden;
}

.c1 {
  position: relative;
  display: flex;
  align-items: center;
}

.c2 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 12px;
  z-index: 1;
  border-radius: 4px;
  transition: background-color 0.1s ease-in-out;
}

.c2:hover:not(.active) {
  background-color: #E2E2E2;
}

.c5 {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  pointer-events: none;
  z-index: 0;
}

.c5::before {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  background-color: #FFFFFF;
  transition: left 0.2s ease-in-out,width 0.2s ease-in-out;
  width: 0px;
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  left: 0px;
}

<div
    class="c0"
    data-testid="segment-component"
  >
    <div
      class="c1"
    >
      <button
        class="c2 active"
        data-testid="segment-button"
      >
        <div
          class="c3"
          data-testid="icon-container"
          size="24"
        >
          <span
            class="c4 material-symbols-rounded"
            color="#000000"
            data-testid="icon"
            size="24"
          >
            view_module
          </span>
        </div>
      </button>
      <button
        class="c2"
        data-testid="segment-button"
      >
        <div
          class="c3"
          data-testid="icon-container"
          size="24"
        >
          <span
            class="c4 material-symbols-rounded"
            color="#000000"
            data-testid="icon"
            size="24"
          >
            view_stream
          </span>
        </div>
      </button>
      <div
        class="c5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Segment tests should render Segment with icons and test 1`] = `
<DocumentFragment>
  .c5 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
  font-family: roboto;
  margin-left: 0.25rem;
  flex-shrink: 0;
}

.c3 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c4 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  display: flex;
  background-color: #EEEEEE;
  border-radius: 4px;
  height: 36px;
  padding: 4px;
  overflow: hidden;
}

.c1 {
  position: relative;
  display: flex;
  align-items: center;
}

.c2 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 12px;
  z-index: 1;
  border-radius: 4px;
  transition: background-color 0.1s ease-in-out;
}

.c2:hover:not(.active) {
  background-color: #E2E2E2;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  pointer-events: none;
  z-index: 0;
}

.c6::before {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  background-color: #FFFFFF;
  transition: left 0.2s ease-in-out,width 0.2s ease-in-out;
  width: 0px;
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  left: 0px;
}

<div
    class="c0"
    data-testid="segment-component"
  >
    <div
      class="c1"
    >
      <button
        class="c2 active"
        data-testid="segment-button"
      >
        <div
          class="c3"
          data-testid="icon-container"
          size="24"
        >
          <span
            class="c4 material-symbols-rounded"
            color="#000000"
            data-testid="icon"
            size="24"
          >
            view_module
          </span>
        </div>
        <p
          class="c5"
          font-family="roboto"
          ml="0.25rem"
        >
          Item 1
        </p>
      </button>
      <button
        class="c2"
        data-testid="segment-button"
      >
        <div
          class="c3"
          data-testid="icon-container"
          size="24"
        >
          <span
            class="c4 material-symbols-rounded"
            color="#000000"
            data-testid="icon"
            size="24"
          >
            view_stream
          </span>
        </div>
        <p
          class="c5"
          font-family="roboto"
          ml="0.25rem"
        >
          Item 2
        </p>
      </button>
      <div
        class="c6"
      />
    </div>
  </div>
</DocumentFragment>
`;
